# jucexqt

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QtComponent.cpp  QtComponent.h  README.md  main.qml
